--- a/index.html
+++ b/index.html
@@ -190,8 +190,13 @@
 
                     if (typeof walletAddress !== 'undefined') {
                         walletAddress = userAccount;
-                        // Add test rewards for developer
-                        setTimeout(() => addTestRewards(), 1000);
+                        console.log('🔗 Wallet connected:', walletAddress);
+
+                        // Clear old rewards and sync with bot
+                        setTimeout(async () => {
+                            await addTestRewards();
+                            await syncWithBot();
+                        }, 1000);
                     }
                     
                     console.log('🎉 Wallet connected:', userAccount);
@@ -413,11 +418,52 @@
         }
 
         // Add test rewards for the developer
-        function addTestRewards() {
-            if (walletAddress && walletAddress.toLowerCase().includes('1mze1')) {
-                // Add 500 test APOCAT for the developer
-                rewardSystem.addReward('test_reward', '500', 'Developer test reward - 500 APOCAT');
-                console.log('🎁 Added 500 test APOCAT for developer wallet');
+        async function addTestRewards() {
+            if (walletAddress) {
+                // Add test tokens via bot API
+                try {
+                    const response = await fetch('http://localhost:3000/api/add-test-tokens', {
+                        method: 'POST',
+                        headers: { 'Content-Type': 'application/json' },
+                        body: JSON.stringify({
+                            walletAddress: walletAddress,
+                            amount: 0.5  // 0.5 APOCAT test tokens
+                        })
+                    });
+
+                    if (response.ok) {
+                        const result = await response.json();
+                        console.log('🎁 Test tokens added:', result.message);
+                        addChatMessage('', `🎁 Welcome! Added 0.5 test APOCAT to your account`, true);
+                    }
+                } catch (error) {
+                    console.log('⚠️ Could not add test tokens (bot offline)');
+                    // Fallback to local storage
+                    rewardSystem.addReward('test_reward', '0.5', 'Welcome bonus - 0.5 test APOCAT');
+                }
+            }
+        }
+
+        // Sync local rewards with bot
+        async function syncWithBot() {
+            if (!walletAddress) return;
+
+            try {
+                const response = await fetch('http://localhost:3000/api/status');
+                if (response.ok) {
+                    const botStatus = await response.json();
+                    console.log('🤖 Bot status:', botStatus);
+
+                    // Clear local storage and reload from bot
+                    console.log('🔄 Syncing rewards with bot...');
+
+                    // Force refresh of pending rewards display
+                    setTimeout(() => {
+                        console.log('📊 Current pending rewards:', rewardSystem.getTotalPending());
+                    }, 2000);
+                }
+            } catch (error) {
+                console.log('⚠️ Could not sync with bot');
             }
         }
 
@@ -750,16 +796,26 @@
                         })
                     });
 
+                    const result = await response.json();
+
                     if (response.ok) {
-                        const result = await response.json();
                         console.log('🤖 Bot collection request sent:', result);
+                        addChatMessage('', `✅ Collection approved! Processing ${totalAmount.toFixed(6)} APOCAT`, true);
                         return true;
                     } else {
-                        console.log('⚠️ Bot collection request failed');
+                        // Handle insufficient amount error
+                        if (result.error === 'INSUFFICIENT_AMOUNT') {
+                            addChatMessage('', `❌ ${result.message}`, true);
+                            addChatMessage('', `💰 Need ${result.required.toFixed(6)} APOCAT total (you have ${result.current.toFixed(6)})`, true);
+                            console.log(`⚠️ Insufficient amount: need ${result.shortfall.toFixed(6)} more APOCAT`);
+                        } else {
+                            addChatMessage('', `❌ Collection failed: ${result.message || 'Unknown error'}`, true);
+                        }
                         return false;
                     }
                 } catch (error) {
                     console.log('⚠️ Bot connection failed for collection');
+                    addChatMessage('', `❌ Bot connection failed - please try again later`, true);
                     return false;
                 }
             },
@@ -2508,16 +2564,25 @@
 
             // Collect Rewards Button (if pending rewards > 0)
             if (pendingTotal > 0) {
-                ctx.fillStyle = 'rgba(255, 215, 0, 0.2)';
+                // Check if amount is sufficient for collection
+                const minRequired = 0.01; // Minimum threshold estimate
+                const canCollect = pendingTotal >= minRequired;
+
+                ctx.fillStyle = canCollect ? 'rgba(255, 215, 0, 0.2)' : 'rgba(255, 100, 100, 0.2)';
                 ctx.fillRect(canvas.width / 2 - 100, 325, 200, 35);
-                ctx.strokeStyle = '#FFD700';
+                ctx.strokeStyle = canCollect ? '#FFD700' : '#FF6464';
                 ctx.lineWidth = 2;
                 ctx.strokeRect(canvas.width / 2 - 100, 325, 200, 35);
 
-                ctx.fillStyle = '#FFD700';
+                ctx.fillStyle = canCollect ? '#FFD700' : '#FF6464';
                 ctx.font = 'bold 14px Arial';
                 ctx.textAlign = 'center';
-                ctx.fillText(`🎁 COLLECT ${pendingTotal.toFixed(3)} APOCAT`, canvas.width / 2, 345);
+
+                if (canCollect) {
+                    ctx.fillText(`🎁 COLLECT ${pendingTotal.toFixed(6)} APOCAT`, canvas.width / 2, 345);
+                } else {
+                    ctx.fillText(`⏳ ${pendingTotal.toFixed(6)} APOCAT (need ${minRequired})`, canvas.width / 2, 345);
+                }
             }
 
             // Token rewards header
@@ -2903,8 +2968,18 @@
                     y >= 325 && y <= 360) {
 
                     if (walletAddress) {
-                        // Check bot status and trigger collection
-                        rewardSystem.collectRewards(walletAddress, pendingTotal);
+                        // Check minimum threshold
+                        const minRequired = 0.01;
+                        if (pendingTotal >= minRequired) {
+                            // Sufficient amount - proceed with collection
+                            rewardSystem.collectRewards(walletAddress, pendingTotal);
+                        } else {
+                            // Insufficient amount - show message
+                            const needed = minRequired - pendingTotal;
+                            addChatMessage('', `❌ ${needed.toFixed(6)} APOCAT - collect more for delivery`, true);
+                            addChatMessage('', `💰 Need ${minRequired} APOCAT minimum (you have ${pendingTotal.toFixed(6)})`, true);
+                            console.log(`⚠️ Insufficient amount: need ${needed.toFixed(6)} more APOCAT`);
+                        }
                     } else {
                         addChatMessage('', '⚠️ Please connect your wallet to collect APOCAT tokens!', true);
                         console.log('⚠️ Wallet not connected for token collection');
